# pocket-coach-app

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_add_users_and_sessions.py  0002_add_plans.py  0003_add_supersets_and_exercise_fields.py  0004_add_workouts.py  0005_add_workout_finished_at.py  0006_add_workout_started_at.py  0007_add_events.py  0008_add_occurred_at_to_events.py  0009_add_meal_logs.py  0010_add_daily_briefings.py  0011_add_data_summaries.py  0012_add_gadgetbridge_tables.py  0013_add_calories_estimated_to_meal_logs.py  0014_add_date_indexes.py  0015_add_food_tables.py
apps/api/app/: activity.py  auth.py  briefing.py  db.py  food_items.py  football.py  gadgetbridge.py  llm.py  llm_context.py  main.py  meal_definitions.py  meals.py  models.py  plans.py  seed.py  summaries.py  today.py  wellbeing.py  workouts.py
apps/api/tests/: test_calorie_estimation.py
docs/: cloudflare-tunnel.md  docker-troubleshooting.md
nginx/: tailscale.conf
tasks/: TASK-001-monorepo-scaffold.md  TASK-002-docker-postgres.md  TASK-003-fastapi-health.md  TASK-004-nextjs-health-page.md  TASK-005-auth-db.md  TASK-006-auth-api.md  TASK-007-auth-frontend.md  TASK-008-plans-db.md  TASK-009-plans-api.md  TASK-010-plans-ui.md  TASK-011-exercise-fields-db.md  TASK-012-superset-moves-unified-order.md  TASK-013-workouts-db.md  TASK-014-workouts-api.md  TASK-015-workouts-ui.md  TASK-031-llm-ui.md  (+33 more)
(+81 files in other folders)
